--- a/site/hugo.yaml
+++ b/site/hugo.yaml
@@ -3,3 +3,7 @@ languageCode: en-us
 title: Personal Site
 theme: 
   - PaperMod
+markup:
+  goldmark:
+    renderer: 
+      unsafe: true # allow mixing HTML and Markdown
