--- a/site/hugo.yaml
+++ b/site/hugo.yaml
@@ -1,27 +1,26 @@
 baseURL: https://adams1mon.pages.dev
 languageCode: en-us
-# title: Personal Site
 title: Home 
 theme: 
   - PaperMod
 
 # PaperMod theme settings
 params:
-  homeInfoParams: 
-    Title: "PaperMod's Demo"
+
+  homeInfoParams:
     Content: >
-      Wwelcome **you**
 
-      - bullet point is not working 
+      Hi 👋
 
-    # 👋 Welcome to demo page of Hugo's theme PaperMod!
 
-    # - **PaperMod**  is designed to be clean and simple but fast and responsive theme with useful feature-set that enhances UX.
+      My name is Adam.
+      I am a software developer and this is my personal site, 
+      where I share my thoughts about everything I find interesting. 
 
-    # - Feel free to show your support by giving us a star 🌟 on GitHub and sharing with your friends and social media .
-
-    # - PaperMod is based on theme [Paper](https://github.com/nanxiaobei/hugo-paper/tree/4330c8b12aa48bfdecbcad6ad66145f679a430b3).
-
+  socialIcons:
+    - name: LinkedIn
+      title: View LinkedIn profile
+      url: "https://www.linkedin.com/in/adam-simon-811368215"
 
 markup:
   goldmark:
